# sudoku

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
inc/: board.hpp  cell.hpp  coord.hpp  ninth.hpp  strategy.hpp
src/: board.cpp  cell.cpp  main.cpp  ninth.cpp  strategy.cpp
test/: CMakeLists.txt  tests.cpp
test/ref/: testcase.001.input  testcase.001.output  testcase.002.output  testcase.003.input  testcase.003.output  testcase.004.input  testcase.005.input  testcase.005.output  testcase.006.input  testcase.006.output  testcase.008.input  testcase.008.output  testcase.009.input  testcase.011.input  testcase.011.output  testcase.012.input  testcase.012.output  testcase.013.input  testcase.013.output  testcase.013_4.output  testcase.014.1.input  testcase.014.1.output  testcase.014.2.input  testcase.014.2.output  testcase.014.3.output  testcase.015_al_esgargot.output  testcase.016.input  testcase.016.output  testcase.017.input  testcase.017.output  testcase.018.input  testcase.018.output  testcase.019.input  testcase.019.output  testcase.020.2.input  testcase.020.2.output  testcase.020.input  testcase.020.output  testcase.022.output
